# operators_on_members

./: CMakeLists.txt  README  build.sh  get-sizes.sh  run-tests.sh
include/: bind_expressions_inline.hpp  bind_expressions_returned_as_boost_functions.hpp  bind_expressions_returned_as_boost_functions_from_hard_coded_functions.hpp  hard_coded_function_objects.hpp  hard_coded_functions.hpp  operator_wrapper_clever_lookup.hpp  operator_wrapper_with_operator_passed_to_it.hpp  operator_wrapper_with_operator_selected_using_enum.hpp  operator_wrapper_with_operator_templated_on_op_type_enable_if.hpp  operator_wrapper_with_operator_templated_on_op_type_full_specialization.hpp  sort_functions_taking_member_pointer.hpp  templated_function_objects_with_hard_coded_member_name.hpp  types.hpp
src/: CMakeLists.txt  main.cpp
